probando otro fondo - tratando de subir un grafico

--- a/assets/css/estilomoneda.css
+++ b/assets/css/estilomoneda.css
@@ -5,7 +5,7 @@
 body{
 font-family: "Comic Sans MS";
 margin:2em;
-background-image: url('/assets/img/fondo3-monedas.png');
+background-image: url('/assets/img/fondo3-monedasJPG.jpg');
 background-repeat: repeat;
 }
 
