--- a/assets/css/estilomoneda.css
+++ b/assets/css/estilomoneda.css
@@ -2,10 +2,12 @@
     padding:0;
     margin:0;
 }
+
 body{
 font-family: "Comic Sans MS";
-margin:2em;
-background-image: url('/assets/img/fondo3-monedasJPG.jpg');
+margin: 2em;
+/* background-image: url("/assets/img/fondo3-monedasJPG.jpg"); */
+background-image: url("/assets/img/billetes-nacionales2.jpg"); 
 background-repeat: repeat;
 }
 
